sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:9: error: ')' expected but ',' found.
    if (!plusPetitQue(i-j),v)
                          ^AlgInsertionSort:15: error: illegal start of simple expression
  }
  ^